Aggiornamento codice