@@ -4,19 +4,23 @@ import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import unicam.ids.HackHub.dto.requests.team.CreateTeamRequest;
 import unicam.ids.HackHub.dto.responses.TeamResponse;
+import unicam.ids.HackHub.enums.HackathonRole;
+import unicam.ids.HackHub.enums.TeamRole;
 import unicam.ids.HackHub.exceptions.BusinessLogicException;
 import unicam.ids.HackHub.exceptions.ResourceNotFoundException;
+import unicam.ids.HackHub.exceptions.UnauthorizedAccessException;
 import unicam.ids.HackHub.model.Hackathon;
+import unicam.ids.HackHub.model.RuleViolationReport;
 import unicam.ids.HackHub.model.Team;
 import unicam.ids.HackHub.model.User;
 import unicam.ids.HackHub.repository.HackathonRepository;
+import unicam.ids.HackHub.repository.RuleViolationRepository;
 import unicam.ids.HackHub.repository.TeamRepository;
 import unicam.ids.HackHub.repository.UserRepository;
+import unicam.ids.HackHub.util.RoleNames;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.time.LocalDateTime;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class TeamService {
@@ -24,25 +28,29 @@ public class TeamService {
     private final TeamRepository teamRepository;
     private final UserRepository userRepository;
     private final HackathonRepository hackathonRepository;
-    private final unicam.ids.HackHub.repository.RuleViolationRepository ruleViolationRepository;
+    private final RuleViolationRepository ruleViolationRepository;
     private final EmailService emailService;
+    private final TeamMembershipService teamMembershipService;
+    private final HackathonRoleAssignmentService hackathonRoleAssignmentService;
 
     public TeamService(TeamRepository teamRepository, UserRepository userRepository,
-            HackathonRepository hackathonRepository,
-            unicam.ids.HackHub.repository.RuleViolationRepository ruleViolationRepository,
-            EmailService emailService) {
+            HackathonRepository hackathonRepository, RuleViolationRepository ruleViolationRepository,
+            EmailService emailService, TeamMembershipService teamMembershipService,
+            HackathonRoleAssignmentService hackathonRoleAssignmentService) {
         this.teamRepository = teamRepository;
         this.userRepository = userRepository;
         this.hackathonRepository = hackathonRepository;
         this.ruleViolationRepository = ruleViolationRepository;
         this.emailService = emailService;
+        this.teamMembershipService = teamMembershipService;
+        this.hackathonRoleAssignmentService = hackathonRoleAssignmentService;
     }
 
     public TeamResponse createTeam(Authentication authentication, CreateTeamRequest request) {
         User creator = userRepository.findByUsernameAndIsDeletedFalse(authentication.getName())
                 .orElseThrow(() -> new ResourceNotFoundException("Utente non trovato o eliminato"));
 
-        if (creator.getTeam() != null) {
+        if (teamMembershipService.hasTeam(creator)) {
             throw new BusinessLogicException("L'utente appartiene gia' a un team");
         }
 
@@ -61,13 +69,10 @@ public class TeamService {
                 .name(request.name())
                 .isPublic(request.isPublic())
                 .hackathon(hackathon)
-                .teamLeader(creator)
-                .members(new ArrayList<>(List.of(creator)))
                 .build();
 
         Team savedTeam = teamRepository.save(team);
-        creator.setTeam(savedTeam);
-        userRepository.save(creator);
+        teamMembershipService.addMembership(creator, savedTeam, TeamRole.LEADER);
 
         if (hackathon != null) {
             hackathon.getTeams().add(savedTeam);
@@ -81,31 +86,29 @@ public class TeamService {
         User user = userRepository.findByUsernameAndIsDeletedFalse(authentication.getName())
                 .orElseThrow(() -> new ResourceNotFoundException("Utente non trovato o eliminato"));
 
-        Team team = user.getTeam();
+        Team team = teamMembershipService.getCurrentTeam(user);
         if (team == null) {
             throw new BusinessLogicException("L'utente non fa parte di alcun team");
         }
 
-        if (team.getTeamLeader().getId().equals(user.getId())) {
+        if (teamMembershipService.isLeader(user, team)) {
             throw new BusinessLogicException(
                     "Il leader non può lasciare il team: elimina il team o nomina un altro leader");
         }
 
-        team.removeMember(user);
-        user.setTeam(null);
-        teamRepository.save(team);
-        userRepository.save(user);
+        teamMembershipService.removeMembership(user, team);
     }
 
     private TeamResponse mapToResponse(Team team) {
+        User leader = teamMembershipService.getLeader(team);
         return TeamResponse.builder()
                 .id(team.getId())
                 .name(team.getName())
                 .isPublic(team.isPublic())
                 .hackathonId(team.getHackathon() != null ? team.getHackathon().getId() : null)
-                .leaderId(team.getTeamLeader() != null ? team.getTeamLeader().getId() : null)
-                .memberIds(team.getMembers().stream().map(User::getId).collect(Collectors.toList()))
-                .mentorIds(team.getMentors().stream().map(User::getId).collect(Collectors.toList()))
+                .leaderId(leader != null ? leader.getId() : null)
+                .memberIds(teamMembershipService.getMemberIds(team))
+                .mentorIds(team.getMentors().stream().map(User::getId).toList())
                 .build();
     }
 
@@ -116,7 +119,7 @@ public class TeamService {
         Team team = teamRepository.findById(teamId)
                 .orElseThrow(() -> new ResourceNotFoundException("Team non trovato"));
 
-        if (!team.getTeamLeader().getId().equals(user.getId())) {
+        if (!teamMembershipService.isLeader(user, team)) {
             throw new BusinessLogicException("Solo il leader può iscrivere il team a un hackathon");
         }
 
@@ -131,7 +134,7 @@ public class TeamService {
             throw new BusinessLogicException("L'hackathon non accetta più iscrizioni");
         }
 
-        if (team.getMembers().size() > hackathon.getMaxTeamSize()) {
+        if (teamMembershipService.countMembers(team) > hackathon.getMaxTeamSize()) {
             throw new BusinessLogicException("Il team supera il numero massimo di membri consentito per questo hackathon");
         }
 
@@ -141,12 +144,13 @@ public class TeamService {
         hackathonRepository.save(hackathon);
     }
 
-    public void reportViolation(org.springframework.security.core.Authentication authentication, Long teamId, unicam.ids.HackHub.dto.requests.team.ReportViolationRequest request) {
+    public void reportViolation(Authentication authentication, Long teamId,
+            unicam.ids.HackHub.dto.requests.team.ReportViolationRequest request) {
         User mentor = userRepository.findByUsernameAndIsDeletedFalse(authentication.getName())
                 .orElseThrow(() -> new ResourceNotFoundException("Utente non trovato o eliminato"));
 
-        if (!"MENTOR".equals(mentor.getRole().getName())) {
-            throw new unicam.ids.HackHub.exceptions.UnauthorizedAccessException("Solo i mentori possono segnalare violazioni");
+        if (!RoleNames.MENTOR.equals(mentor.getRole().getName())) {
+            throw new UnauthorizedAccessException("Solo i mentori possono segnalare violazioni");
         }
 
         Team team = teamRepository.findById(teamId)
@@ -157,22 +161,22 @@ public class TeamService {
         }
 
         boolean isMentorOfTeam = team.getMentors().stream().anyMatch(m -> m.getId().equals(mentor.getId()));
-        boolean isMentorOfHackathon = team.getHackathon().getMentors().stream().anyMatch(m -> m.getId().equals(mentor.getId()));
+        boolean isMentorOfHackathon = hackathonRoleAssignmentService.hasRole(mentor, team.getHackathon(), HackathonRole.MENTOR);
 
         if (!isMentorOfTeam && !isMentorOfHackathon) {
-            throw new unicam.ids.HackHub.exceptions.UnauthorizedAccessException("Non sei assegnato come mentore per questo team o hackathon");
+            throw new UnauthorizedAccessException("Non sei assegnato come mentore per questo team o hackathon");
         }
 
-        unicam.ids.HackHub.model.RuleViolationReport violation = unicam.ids.HackHub.model.RuleViolationReport.builder()
+        RuleViolationReport violation = RuleViolationReport.builder()
                 .team(team)
                 .mentor(mentor)
                 .description(request.description())
-                .createdAt(java.time.LocalDateTime.now())
+                .createdAt(LocalDateTime.now())
                 .build();
         
         ruleViolationRepository.save(violation);
 
-        User organizer = team.getHackathon().getOrganizer();
+        User organizer = hackathonRoleAssignmentService.getOrganizer(team.getHackathon());
         String emailBody = "Il mentore " + mentor.getName() + " " + mentor.getSurname() + 
                 " ha segnalato una violazione delle regole da parte del team '" + team.getName() + 
                 "' nell'hackathon '" + team.getHackathon().getName() + "'.\n" +
